# Modelica-FMI

./: .gitignore  LICENSE  README.md  setup.py
.github/workflows/: build.yml
FMI/: ImportFMU.mo  Internal.mo  Model.mo  Model1000.mo  importFMU.mo  package.mo  package.order
FMI/Examples/FMI2/: BouncingBall.mo  Dahlquist.mo  Feedthrough.mo  Resource.mo  Stair.mo  VanDerPol.mo
FMI/Examples/FMI3/: BouncingBall.mo  Dahlquist.mo  Feedthrough.mo  Resource.mo  Stair.mo  StateSpace.mo  VanDerPol.mo  package.order
FMI/FMI2/: package.mo
FMI/FMI2/Functions/: FMI2DoStep.mo  FMI2EnterContinuousTimeMode.mo  FMI2EnterEventMode.mo  FMI2EnterInitializationMode.mo  FMI2ExitInitializationMode.mo  FMI2GetBoolean.mo  FMI2GetBooleanScalar.mo  FMI2GetContinuousStates.mo  FMI2GetDerivatives.mo  FMI2GetEventIndicators.mo  FMI2GetInitialReal.mo  FMI2GetInteger.mo  FMI2GetReal.mo  FMI2GetRealScalar.mo  FMI2GetString.mo  FMI2NewDiscreteStates.mo  FMI2SetBoolean.mo  FMI2SetContinuousStates.mo  FMI2SetInteger.mo  FMI2SetReal.mo  FMI2SetString.mo  FMI2SetTime.mo  FMI2SetupExperiment.mo  package.order
FMI/FMI2/Interfaces/: FMI2BooleanInput.mo  FMI2BooleanOutput.mo  FMI2IntegerInput.mo  FMI2IntegerOutput.mo  FMI2RealInput.mo  FMI2RealOutput.mo  package.mo  package.order
FMI/FMI2/Types/: FMI2Boolean.mo  FMI2Integer.mo  FMI2Real.mo  FMI2String.mo  FMI2ValueReference.mo  package.mo  package.order
FMI/FMI3/: package.mo
FMI/FMI3/Functions/: FMI3DoStep.mo  FMI3EnterConfigurationMode.mo  FMI3EnterContinuousTimeMode.mo  FMI3EnterEventMode.mo  FMI3EnterInitializationMode.mo  FMI3ExitConfigurationMode.mo  FMI3ExitInitializationMode.mo  FMI3GetBoolean.mo  FMI3GetBooleanMatrix.mo  FMI3GetContinuousStateDerivatives.mo  FMI3GetContinuousStates.mo  FMI3GetEventIndicators.mo  FMI3GetFloat32.mo  FMI3GetFloat32Matrix.mo  FMI3GetFloat32Scalar.mo  FMI3GetFloat64.mo  FMI3GetFloat64Matrix.mo  FMI3GetInitialFloat32.mo  FMI3GetInitialFloat32Matrix.mo  FMI3GetInitialFloat64.mo  FMI3GetInitialFloat64Matrix.mo  FMI3GetInt16.mo  FMI3GetInt16Matrix.mo  FMI3GetInt32.mo  FMI3GetInt32Matrix.mo  FMI3GetInt64.mo  FMI3GetInt64Matrix.mo  FMI3GetInt8.mo  FMI3GetInt8Matrix.mo  FMI3GetString.mo  FMI3GetStringMatrix.mo  FMI3GetUInt16.mo  FMI3GetUInt16Matrix.mo  FMI3GetUInt32.mo  FMI3GetUInt32Matrix.mo  FMI3GetUInt64.mo  FMI3GetUInt64Matrix.mo  FMI3GetUInt8.mo  FMI3GetUInt8Matrix.mo  FMI3SetBoolean.mo  (+29 more)
FMI/FMI3/Interfaces/: FMI3BooleanInput.mo  FMI3BooleanOutput.mo  FMI3Float32Input.mo  FMI3Float32Output.mo  FMI3Float64Input.mo  FMI3Float64Output.mo  FMI3Int16Input.mo  FMI3Int16Output.mo  FMI3Int32Input.mo  FMI3Int32Output.mo  FMI3Int64Input.mo  FMI3Int64Output.mo  FMI3Int8Input.mo  FMI3Int8Output.mo  FMI3UInt16Input.mo  FMI3UInt16Output.mo  FMI3UInt32Input.mo  FMI3UInt32Output.mo  FMI3UInt64Input.mo  FMI3UInt64Output.mo  FMI3UInt8Input.mo  FMI3UInt8Output.mo  Float32Input.mo  Float32Output.mo  package.mo  package.order
FMI/FMI3/Types/: FMI3Boolean.mo  FMI3Float32.mo  FMI3Float64.mo  FMI3Int16.mo  FMI3Int32.mo  FMI3Int64.mo  FMI3Int8.mo  FMI3String.mo  FMI3UInt16.mo  FMI3UInt32.mo  FMI3UInt64.mo  FMI3UInt8.mo  FMI3ValueReference.mo  Float32.mo  package.order
FMI/Internal/: ExternalFMU.mo  FMU.mo  loadFMU.mo  package.mo  package.order
FMI/Internal/FMI2/: FMI2DoStep.mo  FMI2EnterInitializationMode.mo  FMI2ExitInitializationMode.mo  FMI2GetBoolean.mo  FMI2GetInteger.mo  FMI2GetReal.mo  FMI2GetString.mo  FMI2SetBoolean.mo  FMI2SetInteger.mo  FMI2SetReal.mo  FMI2SetString.mo  FMI2SetupExperiment.mo  package.mo  package.order
FMI/Internal/FMI3/: FMI3DoStep.mo  FMI3EnterConfigurationMode.mo  FMI3EnterInitializationMode.mo  FMI3ExitConfigurationMode.mo  FMI3ExitInitializationMode.mo  FMI3GetBoolean.mo  FMI3GetBooleanMatrix.mo  FMI3GetFloat32.mo  FMI3GetFloat32Matrix.mo  FMI3GetFloat64.mo  FMI3GetFloat64Matrix.mo  FMI3GetInt16.mo  FMI3GetInt16Matrix.mo  FMI3GetInt32.mo  FMI3GetInt32Matrix.mo  FMI3GetInt64.mo  FMI3GetInt64Matrix.mo  FMI3GetInt8.mo  FMI3GetInt8Matrix.mo  FMI3GetString.mo  FMI3GetStringMatrix.mo  FMI3GetUInt16.mo  FMI3GetUInt16Matrix.mo  FMI3GetUInt32.mo  FMI3GetUInt32Matrix.mo  FMI3GetUInt64.mo  FMI3GetUInt64Matrix.mo  FMI3GetUInt8.mo  FMI3GetUInt8Matrix.mo  FMI3SetBoolean.mo  FMI3SetBooleanMatrix.mo  FMI3SetFloat32.mo  FMI3SetFloat32Matrix.mo  FMI3SetFloat64.mo  FMI3SetFloat64Matrix.mo  FMI3SetInt16.mo  FMI3SetInt16Matrix.mo  FMI3SetInt32.mo  FMI3SetInt32Matrix.mo  FMI3SetInt64.mo  (+15 more)
FMI/Internal/Logging/: getErrorMessage.mo  getInfoMessage.mo  getWarningMessage.mo  logMessages.mo  package.mo  package.order
FMI/Resources/Include/: FMI.c  FMI.h  FMI2.c  (+7 more)
modelica_fmi/: generate_examples.py  generate_functions.py  import_fmu_to_modelica.py  pyproject.toml
modelica_fmi/src/modelica_fmi/: __main__.py  _lib.py  cli.py  cross_check.py  generate_examples.py  generate_functions.py  import_fmu_to_modelica.py
modelica_fmi/src/modelica_fmi/gui/: ImportDialog.py  __init__.py  __main__.py
modelica_fmi/src/modelica_fmi/gui/forms/: ImportDialog.ui
modelica_fmi/src/modelica_fmi/gui/icons/: icons.qrc
modelica_fmi/src/modelica_fmi/templates/: FMI2_CS.mo  FMI2_Get.mo  FMI2_InternalGet.mo  FMI2_ME.mo  FMI2_Set.mo  FMI3_BasicCS.mo  FMI3_CS.mo  FMI3_Get.mo  FMI3_GetMatrix.mo  FMI3_InternalGet.mo  FMI3_InternalGetMatrix.mo  FMI3_Set.mo  FMI3_SetMatrix.mo  FMU.mo  FMU2.mo  FMU2_CS.mo  FMU3.mo  FMU3_BasicCS.mo  FMU3_CS.mo
modelica_fmi/src/modelica_fmi/templates/functions/: FMI2_Get.mo  FMI2_InternalSet.mo  FMI3_GetMatrix.mo  FMI3_InternalSet.mo  FMI3_InternalSetMatrix.mo
modelica_fmi/templates/: FMI2_CS.mo  FMI3_CS.mo  FMI3_ME.mo  FMI3_SetMatrix.mo  FMU.mo
modelica_fmi/tests/: CMakeLists.txt  ModelicaUtilities.c  conftest.py  simulate_fmi3_cs.c  test_import_to_modelica.py
runtime/: CMakeLists.txt
runtime/include/: ModelicaFMI.h  ModelicaFMI2.h  ModelicaFMI3.h
runtime/src/: FMI2.c  FMI3.c  ModelicaFMI.c  ModelicaFMI2.c  ModelicaFMI3.c  ModelicaUtilities.c
runtime/tests/: simulate_fmi2_cs.c  simulate_fmi3_cs.c
tests/: ModelicaUtilities.c  conftest.py  simulate_fmi2_cs.c  simulate_fmi3_cs.c  test_import_to_modelica.py
(+28 files in other folders)
