[project]
name = "modelica-fmi"
version = "0.0.6"
description = "Import FMUs to Modelica"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fmpy>=0.3.22",
    "jinja2>=3.1.6",
]

[dependency-groups]
dev = [
    "ompython>=3.6.0",
    "pytest>=8.3.5",
    "requests>=2.32.3",
    "ruff>=0.11.12",
]

[project.scripts]
modelica-fmi = "modelica_fmi.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
