[project]
name = "modelica-fmi"
version = "0.0.6"
description = "Import FMUs to Modelica"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fmpy>=0.3.25",
    "jinja2>=3.1.6",
#    "pymola",
    "pyside6>=6.9.1",
]

[dependency-groups]
dev = [
    "ompython>=3.6.0",
    "pytest>=8.3.5",
    "requests>=2.32.3",
    "ruff>=0.11.12",
]

[project.scripts]
modelica-fmi = "modelica_fmi.cli:main"

[project.gui-scripts]
modelica-fmi-gui = "modelica_fmi.gui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
exclude = [
  "*.svg",
  "*.ui",
  "*.qrc",
]

#[tool.uv.sources]
#pymola = { git = "ssh://git@vm-sdl3-dsy.dsone.3ds.com/SCT/pymola.git" }
